@@ -18,7 +18,8 @@ Changes for Perl extension DBD-SQLite
       primary key column names (ISHIGAKI)
     - You can now retrieve some of the statement handle attributes
       before you execute. (ISHIGAKI)
-    - Added preamble to generate ::sqlite3_[hc] modules to allow
+    - Added preamble to copy sqlite3.[hc] files into a share
+      directory (where you can access via File::ShareDir) to allow
       extension authors to use the same C source/header as they
       used to build DBD::SQLite itself. (ISHIGAKI)
 
